# hyperspace-agi-0.9

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
authority/: __init__.py  model_catalog.py  node_registry.py  policy_engine.py  server.py
control-plane/: __init__.py  pull_executor.py  request_classifier.py  runtime_store.py  server.py  smart_router.py
dashboard/: requirements.txt  server.py
dashboard/templates/: index.html
dashboard/templates/partials/: authority.html  dreams.html  models.html  peers.html  stats.html  status.html
docker/: Dockerfile.authority  Dockerfile.control-plane  Dockerfile.dashboard  Dockerfile.node  Dockerfile.ollama  Dockerfile.webui  Dockerfile.worker
node/: __init__.py  ollama_pull_service.py  server.py
node/memory/: __init__.py  tiered_store.py  vector_stub.py
node/runtime/: __init__.py  agent_runtime.py  auto_pull.py  gossip_service.py  node_state.py
shared/: __init__.py  settings.py  trace_splitter.py
shared/domain/: __init__.py  models.py
tests/: __init__.py  test_ollama_pull_service.py  test_policy_engine.py  test_request_classifier.py  test_trace_splitter.py  test_validation_vote_store.py
worker/: __init__.py  dream_replay.py  dream_store.py  dream_validator.py  server.py  validation_vote_store.py
