[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hyperspace-agi"
version = "0.9.0"
requires-python = ">=3.11"
description = "HyperSpace-AGI: distributed AI agent swarm on Docker + Ollama"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "authority*", "worker*", "control_plane*", "node*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
